--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 
 	<groupId>com.github.jonmarsh</groupId>
-	<artifactId>Process_Pixels</artifactId>
+	<artifactId>glom_labeler</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 
 	<name>Glomeruli Annotation Plugin</name>
@@ -51,8 +51,8 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/imagej/example-legacy-plugin</connection>
-		<developerConnection>scm:git:git@github.com:imagej/example-legacy-plugin</developerConnection>
+		<connection>scm:git:git://github.com/jonmarsh/glom_labeler</connection>
+		<developerConnection>scm:git:git@github.com:jmarsh/glom_labeler</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/imagej/example-legacy-plugin</url>
 	</scm>
@@ -64,8 +64,8 @@
 	</ciManagement>
 
 	<properties>
-		<package-name>com.mycompany.imagej</package-name>
-		<main-class>com.mycompany.imagej.Process_Pixels</main-class>
+		<package-name>com..github.jonmarsh</package-name>
+		<main-class>com.github.jonmarsh.Glomeruli_Labeler</main-class>
 		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>My Company, Inc.</license.copyrightOwners>
 	</properties>
