--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<connection>scm:git:git://github.com/jonmarsh/glom_labeler</connection>
 		<developerConnection>scm:git:git@github.com:jmarsh/glom_labeler</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/imagej/example-legacy-plugin</url>
+		<url>https://github.com/JonMarsh/glom_labeler.git</url>
 	</scm>
 	<issueManagement>
 		<system>None</system>
